Issue #SB-28493 fix:overlapping issue fix

--- a/src/app/client/src/app/modules/program-dashboard/components/program-datasets/program-datasets.component.scss
+++ b/src/app/client/src/app/modules/program-dashboard/components/program-datasets/program-datasets.component.scss
@@ -1,6 +1,7 @@
 
 .ui.dropdown.selection {
     padding: 0.5rem 0.75rem !important;
+    z-index: 1;
 }
 
 .li-item {
